productModel add/edit check if name is empty, check if some infos are blank, check if duplicate found done